EEVEE shadow from sun on incorrect face #71661

Closed
opened 2019-11-18 18:03:13 +01:00 by Neith Zaldrizes · 8 comments

System Information
Operating system: Windows 10
Graphics card: gtx 1070

Blender Version
Broken: 2.81,eba4a4bd73ba
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Make a plane, extrude edge downwards put sun next to it and above the plane pointing towards the edge. The new plane that was extruded from edge will cast shadow on plane above it which makes absolutely no sense and is very difficult/impossible to fix/mask with trickery so I am reporting it as a bug. Here is the blend file for example:

shadowproblem.blend

**System Information** Operating system: Windows 10 Graphics card: gtx 1070 **Blender Version** Broken: 2.81,eba4a4bd73ba Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Make a plane, extrude edge downwards put sun next to it and above the plane pointing towards the edge. The new plane that was extruded from edge will cast shadow on plane above it which makes absolutely no sense and is very difficult/impossible to fix/mask with trickery so I am reporting it as a bug. Here is the blend file for example: [shadowproblem.blend](https://archive.blender.org/developer/F8131209/shadowproblem.blend)

Added subscriber: @zaldrizes

Added subscriber: @zaldrizes
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Would assume this is not a bug, but some limitation of cascaded shadow maps?

https://docs.blender.org/manual/en/dev/render/eevee/lighting.html#cascaded-shadow-map

Tweaking the settings [lowering suns max distance for example, playing with distribution, ..., also eevee shadow Cascade Size to maximum 4096px] helps making the artefacts less apparent.
(not seeing the Bias really having any effect here, so I am a bit on shaky ground as well)

Not being 100% sure, I will let @fclem decide...
(I think what would be good is document the known limitations/artefacts with example images in the manual, so we can come back to these if neccessary...)

Would assume this is not a bug, but some limitation of cascaded shadow maps? https://docs.blender.org/manual/en/dev/render/eevee/lighting.html#cascaded-shadow-map Tweaking the settings [lowering suns `max distance` for example, playing with `distribution`, ..., also eevee shadow `Cascade Size` to maximum 4096px] helps making the artefacts less apparent. (not seeing the Bias really having any effect here, so I am a bit on shaky ground as well) Not being 100% sure, I will let @fclem decide... (I think what would be good is document the known limitations/artefacts with example images in the manual, so we can come back to these if neccessary...)

The artifact is caused by shadowmap aliasing (low res). This is the only case where you want to increase the shadow bias.

But the real bug here is that the bias is multiplied by a really small value. If you type a really high value the bias is visible. I don't know if this is to be considered something critical to be changed prior release.

The bias is also dependent on the scale of the scene so I think there is some improvement to be made here.

The artifact is caused by shadowmap aliasing (low res). This is the only case where you want to increase the shadow bias. But the real bug here is that the bias is multiplied by a really small value. If you type a really high value the bias is visible. I don't know if this is to be considered something critical to be changed prior release. The bias is also dependent on the scale of the scene so I think there is some improvement to be made here.
Member

Added subscribers: @dfelinto, @jesterking

Added subscribers: @dfelinto, @jesterking
Member

I don't know if this is to be considered something critical to be changed prior release.

Tbh, I cannot judge how severe this is.
Maybe you should chat with @jesterking , @dfelinto ?

> I don't know if this is to be considered something critical to be changed prior release. Tbh, I cannot judge how severe this is. Maybe you should chat with @jesterking , @dfelinto ?

This issue was referenced by 31ad86884c

This issue was referenced by 31ad86884cb1b9257f8958cd50942e76aefbd705

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-02-14 12:27:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71661
No description provided.